<resources>
    <string name="app_name">Laboratorio 1</string>
    <string name="boton">Sumar los numeros</string>
    <string name="txt1">Introduzca el primer numero.</string>
    <string name="txt2">Introduzca el segundo numero.</string>
    <string name="resultado">¿Cual sera el resultado?</string>
    <string name="numbers">0123456789</string>
    <string name="resta">Restar</string>
    <string name="multiplica">Multiplicar</string>
    <string name="dividir">Dividir</string>
</resources>
