<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txt1"
            android:inputType="number"
            android:digits="@string/numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt1"
            android:drawableLeft="@drawable/ic_filter_1"/>

        <EditText
            android:inputType="number"
            android:id="@+id/txt2"
            android:digits="@string/numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt2"
            android:drawableLeft="@drawable/ic_filter_2"/>

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resultado"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btncalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>



</RelativeLayout>